# sem2lab2

./: CMakeLists.txt  Deque.h  DynamicArray.h  ImmutableArraySequence.h  ImmutableListSequence.h  Menu.h  MutableArraySequence.h  MutableListSequence.h  Queue.h  Stack.h  Tests.h  main.cpp
